# python-algorithms

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
python_algorithms/: __init__.py  __main__.py  cli.py  logging_config.py
python_algorithms/chapter_1/: __init__.py  algorithms.py
python_algorithms/chapter_2/: __init__.py  algorithms.py
python_algorithms/chapter_3/: __init__.py  algorithms.py
tests/: test_chapter_1.py  test_chapter_2.py  test_chapter_3.py
