[project]
name = "python-algorithms"
version = "0.1.0"
description = ""
authors = [
    {name = "Mert Armagan Sari"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru (>=0.7.2,<1.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.9.0,<26.0.0)",
    "pytest (>=8.0.0,<9.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)",
    "ruff (>=0.8.4,<1.0.0)"
]

[tool.ruff]
lint.select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
]

exclude = [
    ".git",
    "__pycache__",
    ".pytest_cache",
    "build",
    "dist",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
